# Apple-Music-Play-History-Converter

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN_APPLE_MUSIC_API.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_TODO.md  README.md  build.py  pyproject.toml  requirements.txt  v2.2.0_FINAL_RELEASE_REPORT.md
.serena/: project.yml
_test_csvs/: Apple Music Play Activity Ema test file.csv
cloudflare-worker/apple-music-proxy/: .dev.vars.example  README.md  package-lock.json  package.json  tsconfig.json  wrangler.toml
cloudflare-worker/apple-music-proxy/src/: index.ts
cloudflare-worker/apple-music-proxy/test/: index.test.ts
docs/: RELEASING.md
docs/plans/: 2026-01-11-toga-settings-accordion-design.md  2026-02-14-cloudflare-workers-shared-proxy.md  TAURI_REMAINING_WORK.md
src/apple_music_history_converter/: accordion_section.py  app_directories.py  apple_music_service.py  export_formats.py  logging_config.py  music_search_service_v2.py  musicbrainz_manager_v2_optimized.py  musicbrainz_optimizer.py  trace_utils.py  ultra_fast_csv_processor.py
tauri-app/: README.md  package-lock.json  package.json  test_sidecar_ipc.py  vite.config.ts
tauri-app/e2e/: mcp-client.mjs  run-tests.mjs
tauri-app/python-sidecar/: requirements.txt  sidecar.py  sidecar.spec  test_e2e_hooks.py  test_isrc_extraction.py  test_retry_rate_limited.py  test_sidecar.py
tauri-app/scripts/: build-sidecar.mjs
tauri-app/src/: App.tsx  index.css  main.tsx
tauri-app/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/src/: diagnostics.rs  lib.rs  main.rs  sidecar.rs
tauri-app/src/__tests__/: app.settings-hydration.test.tsx  preview-table.editable.test.tsx  results-panel.missing-workflow.test.tsx  results-panel.skip-wait.test.tsx  services.status-and-settings.test.tsx  types.test.ts
tauri-app/src/components/: Dialogs.tsx  FileSelection.tsx  LogPanel.tsx  PreviewTable.tsx  ResultsPanel.tsx  ResultsTable.tsx  SettingsSidebar.tsx
tauri-app/src/components/sections/: AdvancedSection.tsx  DatabaseSection.tsx  ServicesSection.tsx
tauri-app/src/components/ui/: Accordion.tsx  Button.tsx  Dialog.tsx  Input.tsx  Progress.tsx  Select.tsx  Table.tsx
tauri-app/src/hooks/: useResize.ts  useSearch.ts  useTauri.ts
tauri-app/src/lib/: commands.ts  errors.ts  types.ts
tests_toga/: test_ui_accordion.py  test_ui_apple_music_section.py
