[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "apple-music-history-converter-backend"
version = "3.0.0"
description = "Shared Python backend modules for the Tauri Apple Music Play History Converter"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Ashraf Ali", email = "nerveband@gmail.com" }
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.3.0",
    "httpx>=0.27.0",
    "duckdb>=0.8.0",
    "requests>=2.25.0",
    "chardet>=4.0.0",
    "pyjwt>=2.8.0",
    "cryptography>=41.0.0",
    "platformdirs>=4.0.0",
    "certifi>=2023.0.0",
    "zstandard>=0.15.0",
    "psutil>=5.8.0",
]

[project.urls]
Homepage = "https://github.com/nerveband/Apple-Music-Play-History-Converter"
Repository = "https://github.com/nerveband/Apple-Music-Play-History-Converter"
Issues = "https://github.com/nerveband/Apple-Music-Play-History-Converter/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["apple_music_history_converter*"]
