[package]
name = "apple-music-history-converter"
version = "3.0.0"
description = "Convert Apple Music CSV files to Last.fm, ListenBrainz, and Spotify formats"
authors = ["Ashraf Ali <nerveband@gmail.com>"]
license = "MIT"
repository = "https://github.com/nerveband/Apple-Music-Play-History-Converter"
edition = "2021"

[lib]
name = "apple_music_history_converter_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
rand = "0.8"
csv = "1.3"
tauri-plugin-mcp = { git = "https://github.com/P3GLEG/tauri-plugin-mcp", optional = true }

[features]
dev-debug = ["tauri-plugin-mcp"]
